# RanchPi

./: .gitignore  .replit  README.md  camera_app.py  configure_git.sh  git_utils.py  network_manager.py  pi_camera_sync.py  pyproject.toml  replit.nix  setup_github.py  websocket_server.py
attached_assets/: Pasted--C2025-02-01-16-01-42-967-picamera2-picamera2-INFO-Camera-stopped-2025-02-01-16-01-43-175-p-1738447381075.txt  Pasted--C2025-02-01-16-07-03-083-picamera2-picamera2-INFO-Camera-stopped-2025-02-01-16-07-03-285-p-1738447671748.txt  Pasted--C2025-02-01-16-15-31-283-picamera2-picamera2-INFO-Camera-stopped-2025-02-01-16-15-31-485-p-1738448183052.txt  Pasted--venv-admin-ranchcam1-RanchPi-pip3-install-picamera2-Looking-in-indexes-https-pypi-org-simp-1738443913173.txt  Pasted-025-02-01-16-51-58-601-picamera2-request-INFO-Time-taken-for-encode-3-324467000311415-ms-20-1738450461224.txt  Pasted-2025-02-01-15-18-25-561-main-INFO-Status-retrieved-successfully-running-False-setti-1738445190824.txt  Pasted-2025-02-01-16-02-40-470-werkzeug-INFO-Restarting-with-stat-2025-02-01-16-02-40-713-mai-1738447514125.txt  Pasted-2025-02-01-16-21-31-115-picamera2-picamera2-INFO-Camera-closed-successfully-venv-admin-ran-1738448531349.txt  Pasted-Below-is-a-high-level-plan-that-explains-how-to-set-up-your-Raspberry-Pi-so-that-it-broadcasts-its-c-1738440809013.txt  Pasted-Below-is-a-high-level-plan-with-steps-you-can-provide-to-Replit-or-use-as-a-checklist-to-set-up-yo-1738440222556.txt  Pasted-INFO-main-Status-retrieved-successfully-running-True-settings-brightness-50-contr-1738443615402.txt  (+3 more)
(+4 files in other folders)
