[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "picamera2>=0.3.24",
    "pillow>=11.1.0",
    "oauthlib>=3.2.2",
    "flask-cors>=5.0.0",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
    "numpy>=2.2.2",
]
